--- a/notebooks/Rerun select stars.ipynb
+++ b/notebooks/Rerun select stars.ipynb
@@ -30,7 +30,9 @@
     "                        StarResult, Status, JokerRun, initialize_db)\n",
     "from twoface.data import APOGEERVData\n",
     "from twoface.io import load_samples\n",
-    "from twoface.plot import plot_data_orbits"
+    "from twoface.plot import plot_data_orbits\n",
+    "\n",
+    "from schwimmbad import MultiPool"
    ]
   },
   {
@@ -102,8 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "params = JokerParams(P_min=8*u.day, P_max=32768*u.day)\n",
-    "joker = TheJoker(params)"
+    "params = JokerParams(P_min=8*u.day, P_max=32768*u.day)"
    ]
   },
   {
@@ -114,8 +115,10 @@
    },
    "outputs": [],
    "source": [
-    "samples = joker.iterative_rejection_sample(data, n_requested_samples=128, \n",
-    "                                           prior_cache_file=path.join(TWOFACE_CACHE_PATH, prior_file))"
+    "with MultiPool() as pool:\n",
+    "    joker = TheJoker(params, pool=pool)\n",
+    "    samples = joker.iterative_rejection_sample(data, n_requested_samples=128, \n",
+    "                                               prior_cache_file=path.join(TWOFACE_CACHE_PATH, prior_file))"
    ]
   },
   {
