--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -2,12 +2,66 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Adrian Price-Whelan at 2017-08-14 10:11:58 +0200 
+%% Created for Adrian Price-Whelan at 2017-12-12 08:53:04 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Badenes:2017,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2017arXiv171100660B},
+	Archiveprefix = {arXiv},
+	Author = {{Badenes}, C. and {Mazzola}, C. and {Thompson}, T.~A. and {Covey}, K. and {Freeman}, P.~E. and {Walker}, M.~G. and {Moe}, M. and {Troup}, N. and {Nidever}, D. and {Allende Prieto}, C. and {Andrews}, B. and {Barb{\'a}}, R.~H. and {Beers}, T.~C. and {Bovy}, J. and {Carlberg}, J.~K. and {De Lee}, N. and {Johnson}, J. and {Lewis}, H. and {Majewski}, S.~R. and {Pinsonneault}, M. and {Sobeck}, J. and {Stassun}, K.~G. and {Zasowski}, G.},
+	Date-Added = {2017-12-12 13:53:02 +0000},
+	Date-Modified = {2017-12-12 13:53:03 +0000},
+	Eprint = {1711.00660},
+	Journal = {ArXiv e-prints},
+	Keywords = {Astrophysics - Solar and Stellar Astrophysics},
+	Month = nov,
+	Primaryclass = {astro-ph.SR},
+	Title = {{Stellar Multiplicity Meets Stellar Evolution And Metallicity: The APOGEE View}},
+	Year = 2017}
+
+@article{Troup:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016AJ....151...85T},
+	Archiveprefix = {arXiv},
+	Author = {{Troup}, N.~W. and {Nidever}, D.~L. and {De Lee}, N. and {Carlberg}, J. and {Majewski}, S.~R. and {Fernandez}, M. and {Covey}, K. and {Chojnowski}, S.~D. and {Pepper}, J. and {Nguyen}, D.~T. and {Stassun}, K. and {Nguyen}, D.~C. and {Wisniewski}, J.~P. and {Fleming}, S.~W. and {Bizyaev}, D. and {Frinchaboy}, P.~M. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Ge}, J. and {Hearty}, F. and {Meszaros}, S. and {Pan}, K. and {Allende Prieto}, C. and {Schneider}, D.~P. and {Shetrone}, M.~D. and {Skrutskie}, M.~F. and {Wilson}, J. and {Zamora}, O.},
+	Date-Added = {2017-12-12 13:51:45 +0000},
+	Date-Modified = {2017-12-12 13:51:46 +0000},
+	Doi = {10.3847/0004-6256/151/3/85},
+	Eid = {85},
+	Eprint = {1601.00688},
+	Journal = {\aj},
+	Keywords = {binaries: close, binaries: spectroscopic, brown dwarfs, Galaxy: stellar content, planetary systems},
+	Month = mar,
+	Pages = {85},
+	Primaryclass = {astro-ph.SR},
+	Title = {{Companions to APOGEE Stars. I. A Milky Way-spanning Catalog of Stellar and Substellar Companion Candidates and Their Diverse Hosts}},
+	Volume = 151,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/0004-6256/151/3/85}}
+
+@article{Raskutti:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...829..130R},
+	Archiveprefix = {arXiv},
+	Author = {{Raskutti}, S. and {Ostriker}, E.~C. and {Skinner}, M.~A.},
+	Date-Added = {2017-12-12 13:38:39 +0000},
+	Date-Modified = {2017-12-12 13:38:40 +0000},
+	Doi = {10.3847/0004-637X/829/2/130},
+	Eid = {130},
+	Eprint = {1608.04469},
+	Journal = {\apj},
+	Keywords = {hydrodynamics, ISM: clouds, methods: numerical, radiative transfer, stars: formation},
+	Month = oct,
+	Pages = {130},
+	Title = {{Numerical Simulations of Turbulent Molecular Clouds Regulated by Radiation Feedback Forces. I. Star Formation Rate and Efficiency}},
+	Volume = 829,
+	Year = 2016,
+	Bdsk-Url-1 = {http://dx.doi.org/10.3847/0004-637X/829/2/130}}
 
 @inbook{Murray:2010,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
