--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -56,7 +56,7 @@
 
 \begin{document}\sloppy\sloppypar\raggedbottom\frenchspacing % trust me
 
-\title{Binary companions of red giant stars with APOGEE I: \\
+\title{Binary companions of red giant stars with APOGEE: \\
        catalog and companions that survive the common envelope}
 
 \author[0000-0003-0872-7098]{Adrian~M.~Price-Whelan}
@@ -139,28 +139,57 @@ stellar companions should not survive the common-envelope \RGB\ phase.}
 
 \section{Introduction} \label{sec:intro}
 
-\todo{An alternate approach to this intro is to start with an overview of
-      binary stars, radial velocity measurements of binarity in general...}
+\todo{Intro is missing many citations}
 
-\todo{As is, the intro is missing many citations}
+Nearly all stars form with stellar companions in multiplets or clusters, through
+subsequent dynamical evolution that stars may lose their neighbors.
+Main sequence stars in the solar neighborhood more often appear in binary or
+multiple star systems than singles (\citealt{ragavhan,tokovinin,todo}).
+- Related to fragmentation in collapsing protostellar / molecular cloud ->
+  multiple stars (e.g., \citealt{Raskutti:2016})
+- Population of stellar binaries and multiplets -> information about star
+  formation, dynamics
+
+Even without stellar or sub-stellar companions, single stars likely have
+planetary-mass companions (\citealt{todo}.
+- Different formation channel for planets?
+- Sub-stellar companions?
+
+- Almost all stars have companions of some mass
+These systems have a large dynamic range of constituent and orbital
+characteristics.
+For example, for binary main-sequence stars, mass-ratios span from XX to 1 and
+periods from XX to YY years.
+- Population of companions and trends (e.g., with metallicity) -> star and
+  planet formation processes
+
+- Expect differences in evolved star pop. from main sequence populations:
+  - mass loss
+  - envelope -> engulfment?
+- But less is known about the population of companions to evolved stars.
+- Current samples limited in dynamical range of chemical properties, location,
+  age (local to sun)
+- Brighter, but typically larger distances, direct imaging not feasible
+- Eclipsing companions good, but low mass companions stars -> hard to find
+  (giants are big)
+- Need large sample of stars with time-domain spectroscopy
 
 Time-domain radial-velocity measurements of stars contain information about
 massive companions: even with two successive observations of a single star, a
 difference in the measured radial velocities implies the existence of at least
 one companion.
 However, with few or imprecise radial-velocity measurements, the orbital
-properties of the companion(s) are very poorly constrained.
-Most prior searches for companions using survey RV data have therefore
-restricted their searches to only sources with many epochs, so that the orbital
-solution can be unambiguously determined.
+properties of the companion(s) are very poorly constrained (e.g.,
+\citealt{Price-Whelan:2017}).
 The vast majority of spectroscopic targets with repeat observations in the
-largest (by number of objects) stellar spectroscopic surveys are in the opposite
-regime: targets are often observed just a few times with sparse, non-uniform
-phase coverage.
-
-% With such data, even if the period or other generic orbital parameters
-% are very poorly constrained, limits on companion mass or pericentric distance
-% of the companion may still XX.
+largest (by number of objects) stellar spectroscopic surveys are often observed
+just a few times with sparse, non-uniform phase coverage.
+Most prior searches for companions using survey RV data have therefore
+restricted their searches to only sources with many, high-precision epochs, so
+that the orbital solution can be unambiguously determined (e.g.,
+\citealt{Troup:2016}), or have used simple statistics computed from the data to
+study multiplicity (e.g., ${\rm RV}_{\rm max} - {\rm RV}_{\rm min}$;
+\citealt{Badenes:2017}).
 
 If there are only a few radial-velocity measurements made per star, and the
 companion spectrum is not observed, any measured radial-velocity values will be
