infer jitter single gaussian

--- a/notebooks/infer jitter.ipynb
+++ b/notebooks/infer jitter.ipynb
@@ -81,39 +81,12 @@
     "def ln_normal(x, mu, std):\n",
     "    return -0.5*( ((x-mu) / std)**2 + np.log(2*np.pi*std**2))\n",
     "\n",
-    "def ln_normal_mixture(x, amps, mus, stds):\n",
-    "    n_components = len(amps)\n",
-    "    \n",
-    "    lls = []\n",
-    "    for j in range(n_components):\n",
-    "        lls.append(ln_normal(x, mus[j], stds[j]) + np.log(amps[j]))\n",
-    "    \n",
-    "    return logsumexp(lls, axis=0)\n",
-    "\n",
     "# test against (slower) scipy implementation:\n",
     "from scipy.stats import norm\n",
     "derp = np.random.uniform(-2, 2, size=100)\n",
     "pars = np.random.uniform(1E-3, 10, size=2)\n",
     "assert np.allclose(norm.logpdf(derp, loc=pars[0], scale=pars[1]),\n",
-    "                   ln_normal(derp, *pars))\n",
-    "\n",
-    "assert np.allclose(ln_normal_mixture(derp, [1.], [pars[0]], [pars[1]]),\n",
-    "                   ln_normal(derp, *pars))\n",
-    "\n",
-    "# test mixutre model against (slower) scikit learn\n",
-    "from sklearn.mixture import GaussianMixture\n",
-    "# 3 components\n",
-    "g = GaussianMixture(n_components=3, covariance_type='spherical')\n",
-    "g.means_ = np.random.uniform(-2, 2, size=3)\n",
-    "g.covariances_ = np.random.uniform(1, 3, size=3)\n",
-    "g.weights_ = [0.35, 0.3, 0.35]\n",
-    "g.converged_ = True\n",
-    "g.precisions_cholesky_ = None\n",
-    "\n",
-    "derp = np.random.uniform(-2, 2, size=100).reshape(100,1)\n",
-    "print(g.score(derp))\n",
-    "\n",
-    "pars = np.ravel(list(zip(g.weights_, g.means_, g.covariances_)))\n"
+    "                   ln_normal(derp, *pars))"
    ]
   },
   {
@@ -165,9 +138,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "Now load the posterior jitter samples under the interim prior:"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data by getting particular stars:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The aspcapflag bitmask removes STAR_WARN\n",
+    "# The starflag bitmask removes SUSPECT_BROAD_LINES \n",
+    "stars = session.query(AllStar).join(StarResult, JokerRun, Status)\\\n",
+    "                              .filter(Status.id > 0)\\\n",
+    "                              .filter(JokerRun.name == 'apogee-jitter')\\\n",
+    "                              .filter(AllStar.nvisits > 7)\\\n",
+    "                              .filter(AllStar.aspcapflag.op('&')(2**7) == 0)\\\n",
+    "                              .filter(AllStar.starflag.op('&')(2**17) == 0)\\\n",
+    "                              .all()\n",
+    "#                              .limit(1024).all()\n",
+    "print(len(stars))"
    ]
   },
   {
@@ -179,27 +176,17 @@
     "K_n = []\n",
     "apogee_ids = []\n",
     "with h5py.File(samples_file) as f:\n",
-    "    # Only load 10000 stars for now\n",
-    "    N = 2000\n",
-    "    # N = len(f.keys())\n",
+    "    # Values that aren't filled get set to nan\n",
+    "    N = len(stars)\n",
+    "    y_nk = np.full((N, 128), np.nan)\n",
     "    \n",
-    "    # Values that aren't filled get set to 9999.\n",
-    "    # shut up.\n",
-    "    y_nk = np.full((N, 128), 9999.)\n",
-    "    \n",
-    "    for n,key in enumerate(f):\n",
+    "    for n, key in enumerate([s.apogee_id for s in stars]):\n",
     "        K = len(f[key]['jitter'])\n",
     "        \n",
     "        s = f[key]['jitter'][:] * 1000. # km/s to m/s\n",
     "        y_nk[n,:K] = np.log(s**2)\n",
     "        K_n.append(K)\n",
     "        apogee_ids.append(key)\n",
-    "        \n",
-    "        if n >= (N-1): \n",
-    "            break\n",
-    "            \n",
-    "        elif n % 1000 == 0:\n",
-    "            print(n)    \n",
     "\n",
     "K_n = np.array(K_n)\n",
     "apogee_ids = np.array(apogee_ids)\n",
@@ -207,6 +194,51 @@
     "# for nulling out the probability for non-existing samples\n",
     "mask = np.zeros_like(y_nk)\n",
     "mask[y_nk == 9999.] = -np.inf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load data by getting a random batch of some size:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# K_n = []\n",
+    "# apogee_ids = []\n",
+    "# with h5py.File(samples_file) as f:\n",
+    "#     # Only load 10000 stars for now\n",
+    "#     N = 2000\n",
+    "#     # N = len(f.keys())\n",
+    "    \n",
+    "#     # Values that aren't filled get set to nan\n",
+    "#     y_nk = np.full((N, 128), np.nan)\n",
+    "    \n",
+    "#     for n,key in enumerate(f):\n",
+    "#         K = len(f[key]['jitter'])\n",
+    "        \n",
+    "#         s = f[key]['jitter'][:] * 1000. # km/s to m/s\n",
+    "#         y_nk[n,:K] = np.log(s**2)\n",
+    "#         K_n.append(K)\n",
+    "#         apogee_ids.append(key)\n",
+    "        \n",
+    "#         if n >= (N-1): \n",
+    "#             break\n",
+    "            \n",
+    "#         elif n % 1000 == 0:\n",
+    "#             print(n)    \n",
+    "\n",
+    "# K_n = np.array(K_n)\n",
+    "# apogee_ids = np.array(apogee_ids)\n",
+    "\n",
+    "# # for nulling out the probability for non-existing samples\n",
+    "# mask = np.zeros_like(y_nk)\n",
+    "# mask[y_nk == 9999.] = -np.inf"
    ]
   },
   {
@@ -238,11 +270,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bins = np.linspace(-8, 10, 32)\n",
-    "plt.hist(np.ravel(y_nk), bins=bins, normed=True, alpha=0.6, label='all samples');\n",
-    "plt.hist(np.median(y_nk, axis=1), bins=bins, normed=True, alpha=0.6, label='median over $k$');\n",
+    "bins = np.linspace(-8, 20, 32)\n",
+    "plt.hist(np.ravel(y_nk)[np.isfinite(np.ravel(y_nk))], bins=bins, normed=True, alpha=0.6, label='all samples');\n",
+    "plt.hist(np.nanmedian(y_nk, axis=1), bins=bins, normed=True, alpha=0.6, label='median over $k$');\n",
     "plt.legend(loc='upper left', fontsize=16)\n",
     "plt.xlabel(r'$y = \\ln s^2$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teff = [s.teff for s in stars]\n",
+    "logg = [s.logg for s in stars]\n",
+    "snr = [s.snr for s in stars]\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(7,7.5), sharex='col', sharey='row')\n",
+    "\n",
+    "style = dict(c=np.nanmax(y_nk, axis=1), marker='o', s=8, alpha=0.65,\n",
+    "             vmin=2, vmax=13, linewidth=0)\n",
+    "c = axes[0,0].scatter(teff, snr, **style)\n",
+    "axes[1,0].scatter(teff, logg, **style)\n",
+    "axes[1,1].scatter(snr, logg, **style)\n",
+    "\n",
+    "axes[0,0].set_xlim(6000, 3500)\n",
+    "axes[0,0].set_yscale('log')\n",
+    "axes[1,1].set_xscale('log')\n",
+    "axes[1,0].set_ylim(4, 0)\n",
+    "\n",
+    "axes[0,0].set_ylabel('SNR')\n",
+    "axes[1,0].set_xlabel('Teff')\n",
+    "axes[1,0].set_ylabel('log$g$')\n",
+    "axes[1,1].set_xlabel('SNR')\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "axes[0,1].set_visible(False)\n",
+    "\n",
+    "fig.subplots_adjust(left=0.1, right=0.95, top=0.9)\n",
+    "\n",
+    "cax = fig.add_axes([0.1, 0.92, 0.85, 0.025])\n",
+    "cb = fig.colorbar(c, cax=cax, orientation='horizontal')\n",
+    "cb.set_label(r'${\\rm med}_k\\left(y_{nk}\\right)$', labelpad=10)\n",
+    "cb.ax.xaxis.tick_top()\n",
+    "cb.ax.xaxis.set_label_position('top')\n",
+    "cb.set_clim(style['vmin'], style['vmax'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(6,5))\n",
+    "\n",
+    "style = dict(marker='o', s=8, alpha=0.25, linewidth=0)\n",
+    "c = ax.scatter(snr, np.nanmax(y_nk, axis=1), **style)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_ylim(2, 15)\n",
+    "\n",
+    "ax.set_xlabel('SNR')\n",
+    "ax.set_ylabel(r'${\\rm med}_k\\left(y_{nk}\\right)$')\n",
+    "\n",
+    "fig.tight_layout()"
    ]
   },
   {
@@ -268,7 +361,7 @@
     "print(i)\n",
     "\n",
     "star = session.query(AllStar).filter(AllStar.apogee_id == apogee_ids[i]).limit(1).one()\n",
-    "data = star.apogeervdata()\n",
+    "data = star.apogeervdata(clean=True)\n",
     "\n",
     "samples = JokerSamples(trend_cls=VelocityTrend1, **load_samples(samples_file, apogee_ids[i]))\n",
     "_ = plot_data_orbits(data, samples)\n",
@@ -364,41 +457,19 @@
     "        \n",
     "    return ll\n",
     "\n",
-    "def ln_likelihood(pars, y, K, ln_prior0, mask):\n",
+    "def ln_likelihood(pars, y, K, ln_prior0):\n",
     "    \"\"\" Original, single Gaussian implementation \"\"\"\n",
     "    mu, std = pars      \n",
-    "    delta_ln_prior = ln_normal(y, mu, std) - ln_prior0 + mask\n",
+    "    delta_ln_prior = ln_normal(y, mu, std) - ln_prior0\n",
+    "    delta_ln_prior[np.isnan(delta_ln_prior)] = -np.inf\n",
     "    ll = logsumexp(delta_ln_prior, axis=1) - np.log(K)\n",
     "    return ll\n",
     "\n",
-    "\n",
-    "def ln_likelihood_mixture(pars, y, K, ln_prior0, mask):    \n",
-    "    n_components = len(pars) // 3 # amp, mu, std\n",
-    "    \n",
-    "    amps = []\n",
-    "    mus = []\n",
-    "    stds = []\n",
-    "    for j in range(n_components):\n",
-    "        amps.append(pars[3*j])\n",
-    "        mus.append(pars[3*j+1])\n",
-    "        stds.append(pars[3*j+2])\n",
-    "        \n",
-    "    new_ln_prior = ln_normal_mixture(y, amps, mus, stds)\n",
-    "    \n",
-    "    delta_ln_prior = new_ln_prior - ln_prior0 + mask\n",
-    "    ll = logsumexp(delta_ln_prior, axis=1) - np.log(K)\n",
-    "    return ll\n",
-    "\n",
-    "\n",
-    "def ln_prob(pars, y, K, ln_prior0, mask):\n",
+    "def ln_prob(pars, y, K, ln_prior0):\n",
     "    # TODO: prior over mu, std of jitter param distribution\n",
     "    lp = 0.\n",
     "    \n",
-    "    if len(pars) == 2:\n",
-    "        ll_n = ln_likelihood(pars, y, K, ln_prior0, mask)\n",
-    "    \n",
-    "    else:\n",
-    "        ll_n = ln_likelihood_mixture(pars, y, K, ln_prior0, mask)\n",
+    "    ll_n = ln_likelihood(pars, y, K, ln_prior0)\n",
     "    \n",
     "    if not np.all(np.isfinite(ll_n)):\n",
     "        return -np.inf\n",
@@ -410,10 +481,7 @@
     "             np.random.uniform(1E-3, 5)]\n",
     "\n",
     "assert np.allclose(ln_likelihood_slow(test_pars, y_nk, K_n, ln_p0),\n",
-    "                   ln_likelihood(test_pars, y_nk, K_n, ln_p0, mask))\n",
-    "\n",
-    "assert np.allclose(ln_likelihood(test_pars, y_nk, K_n, ln_p0, mask),\n",
-    "                   ln_likelihood_mixture([1.] + test_pars, y_nk, K_n, ln_p0, mask))"
+    "                   ln_likelihood(test_pars, y_nk, K_n, ln_p0))"
    ]
   },
   {
@@ -422,10 +490,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "slc = (slice(0,3),) # single\n",
+    "# slc = (slice(0,3),) # single\n",
     "# slc = np.array([512,777])# + list(range(100))) # the two minmax stars above\n",
-    "# slc = (slice(None),) # all\n",
-    "args = (y_nk[slc], K_n[slc], ln_p0[slc], mask[slc])\n",
+    "slc = (slice(None),) # all\n",
+    "# slc = np.array([225, 139])\n",
+    "args = (y_nk[slc], K_n[slc], ln_p0[slc])\n",
     "\n",
     "(ln_likelihood([-2, 4.], *args),\n",
     " ln_likelihood([2, 4.], *args))"
@@ -437,21 +506,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(ln_likelihood_mixture([0.5, 0, 6.,  0.5, 5, 2.], *args),\n",
-    " ln_likelihood_mixture([0.1, 0, 6.,  0.9, 5, 2.], *args))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "bins = np.linspace(-5, 18, 55)\n",
     "\n",
     "_n_sub = y_nk[slc].shape[0]\n",
-    "for _n in range(_n_sub):\n",
-    "    plt.hist(y_nk[slc][_n], bins=bins, alpha=0.5, label='star {0}'.format(_n))\n",
+    "for _n in range(min(_n_sub, 8)):\n",
+    "    plt.hist(y_nk[slc][_n][np.isfinite(y_nk[slc][_n])], bins=bins, \n",
+    "             alpha=0.5, label='star {0}'.format(_n))\n",
     "\n",
     "plt.legend(loc='best')\n",
     "    \n",
@@ -476,7 +536,7 @@
    "outputs": [],
    "source": [
     "# Single-component likelihood\n",
-    "sigma_y = 0.01\n",
+    "sigma_y = 2.\n",
     "# sigma_y = np.std(y_nk[slc].ravel())\n",
     "\n",
     "lls = []\n",
@@ -492,34 +552,6 @@
     "axes[1].set_ylabel(r'$p(\\{D_n\\}|\\alpha)$')\n",
     "\n",
     "# axes[1].axvline(np.mean(y_nk[slc].ravel()))\n",
-    "\n",
-    "axes[0].set_xlabel(r'$\\mu_y$')\n",
-    "axes[1].set_xlabel(r'$\\mu_y$')\n",
-    "\n",
-    "axes[0].xaxis.set_ticks(np.arange(vals.min(), vals.max()+1, 2))\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Multi-Gaussian likelihood\n",
-    "lls = []\n",
-    "vals = np.linspace(-5, 15, 128)\n",
-    "for val in vals:\n",
-    "    lls.append(ln_likelihood_mixture([0.1, 0, 6.,  \n",
-    "                                      0.9, val, 1.], *args).sum())\n",
-    "    \n",
-    "fig, axes = plt.subplots(1, 2, figsize=(12,5), sharex=True)\n",
-    "\n",
-    "axes[0].plot(vals, lls)\n",
-    "axes[0].set_ylabel(r'$\\ln p(\\{D_n\\}|\\alpha)$')\n",
-    "axes[1].plot(vals, np.exp(lls - np.max(lls)))\n",
-    "axes[1].set_ylabel(r'$p(\\{D_n\\}|\\alpha)$')\n",
     "\n",
     "axes[0].set_xlabel(r'$\\mu_y$')\n",
     "axes[1].set_xlabel(r'$\\mu_y$')\n",
@@ -576,78 +608,19 @@
    "outputs": [],
    "source": [
     "plt.figure(figsize=(6,5))\n",
-    "# plt.pcolormesh(mu_grid, std_grid,\n",
-    "#                probs.reshape(mu_grid.shape),\n",
-    "#                cmap='Blues', vmin=-100, vmax=probs.max())\n",
+    "\n",
     "plt.pcolormesh(mu_grid, std_grid,\n",
-    "               np.exp(probs.reshape(mu_grid.shape)),\n",
-    "               cmap='Blues')#, vmin=-100, vmax=probs.max())\n",
+    "               probs.reshape(mu_grid.shape),\n",
+    "               cmap='Blues', vmin=-1000, vmax=probs.max())\n",
+    "# plt.pcolormesh(mu_grid, std_grid,\n",
+    "#                np.exp(probs.reshape(mu_grid.shape)),\n",
+    "#                cmap='Blues')\n",
+    "\n",
     "plt.yscale('log')\n",
     "plt.colorbar()\n",
     "plt.xlabel(r'$\\mu_y$')\n",
     "plt.ylabel(r'$\\sigma_y$')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## DA FUQ?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -676,7 +649,7 @@
    "outputs": [],
    "source": [
     "nwalkers = 16\n",
-    "p0 = np.random.normal([5, 4**2], [1E-3, 1E-3], size=(nwalkers, 2))"
+    "p0 = np.random.normal([5, 4.], [1E-3, 1E-3], size=(nwalkers, 2))"
    ]
   },
   {
@@ -686,7 +659,7 @@
    "outputs": [],
    "source": [
     "sampler = emcee.EnsembleSampler(nwalkers, dim=2, lnpostfn=ln_prob,\n",
-    "                                args=(y_nk, K_n))\n",
+    "                                args=(y_nk, K_n, ln_p0))\n",
     "pos,*_ = sampler.run_mcmc(p0, 256)\n",
     "# sampler.reset()\n",
     "# _ = sampler.run_mcmc(pos, 512)"
